--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <th></th>
                 </tr>
                 </thead>
-                <tbody>
+                <tbody id="tableBody">
                 </tbody>
                 <tfoot>
                 <tr>
