Implement popup messages

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>DOM Assignment 1</title>
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="node_modules/sweetalert2/dist/sweetalert2.min.css">
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
@@ -87,5 +88,6 @@
     Copyright &copy; 2020 IJSE
 </footer>
 <script src="js/customer-ctrl.js"></script>
+<script src="node_modules/sweetalert2/dist/sweetalert2.min.js"></script>
 </body>
 </html>
