--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <hr>
                 <div class="form-group">
-                    <button class="btn btn-primary" id="btn-save">Save</button>
+                    <button class="btn btn-primary" id="btn-save" type="button">Save</button>
                     <button class="btn btn-danger" id="btn-clear" type="reset">Clear</button>
                 </div>
             </form>
